--- a/filemanager-0.5/res/values/strings.xml
+++ b/filemanager-0.5/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (c) 2014 Michal Dabski
   
   Permission is hereby granted, free of charge, to any person obtaining a copy of
@@ -66,7 +65,7 @@
         \n        
         In-app icons from www.iconsdb.com</string>
     <string name="app_icon">App icon</string>
-    <string name="up" translatable="false">Up</string>
+    <string name="up">Up</string>
     <string name="error">Error</string>
     <string name="rename_file">Rename file</string>
     <string name="rename_folder">Rename folder</string>
